# raylib-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  MyRaylibProject.make  README.md  premake5.lua  raylib.make  taskfile.yml
Source/: main.cpp
src/: Game.cpp  Game.h  main.cpp
